--- a/plugins/Agregator/catering.html
+++ b/plugins/Agregator/catering.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
-  <h id="catering" author="InternetGuru" ctime="2018-02-20">Objednávka cateringu</h>
-  <desc>Po odeslání objednávky Vás budeme do tří pracovních dnů kontaktovat s doplňujícími informacemi a cenovou nabídkou.</desc>
-  <p var="contactform-catering">Cateringový formulář není k dispozici</p>
+  <h id="catering" author="InternetGuru" ctime="2018-02-20">Catering order form</h>
+  <desc>We will contact you within three days of order form submission with additional information and a price quote.</desc>
+  <p var="contactform-catering">Catering form not available</p>
 </body>
