--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
-  <h author="InternetGuru" ctime="2015-06" id="inputvar">Administrace akční nabídky jídel</h>
-  <desc kw="administrace, InputVar">Při úpravě textů dbejte na <a href="https://cs.wikipedia.org/wiki/Wikipedie:Typografick%C3%A9_rady" title="Wikipedie: Typografické rady">obecná pravidla typografie</a>, zejména pak na výčet typických nedostatků (níže). Před uložením si texty po sobě přečtěte s odstupem aspoň několika minut. Po uložení si texty projděte znovu, ideálně požádejte kolegu. Pro skrytí jídla nechte pole prázdné.</desc>
+  <h author="InternetGuru" ctime="2015-06" id="inputvar">Administration of special food offers</h>
+  <desc kw="administrace, InputVar">When editing texts, respect <a href="https://cs.wikipedia.org/wiki/Wikipedie:Typografick%C3%A9_rady" title="Wikipedia: Typographic advice">general typographic rules</a>, and particularly the list of common shortcomings (below). Before saving, read the text again after at least a few minutes. After saving, go through the text once more; ideally, ask a colleague to review it as well. Leave the box blank to hide a dish.</desc>
 
   <dl>
-    <dt>Terminologie a pravopis</dt>
-    <dd>Minimalizujte používání cizích termínů a žargonu! Ujistěte se, že neexistuje vhodný překlad. Čeští uživatelé preferují srozumitelnou (spisovnou) češtinu. Neznámé termíny je spíše odrazují.</dd>
-    <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište (např. <samp>vývar</samp> a nikoli <del><samp>browth</samp></del>). Případně můžete použít interaktivní slovník pojmů, např. <a var="inputvar-term-sous-vide">sous-vide</a>.</dd>
-    <dd>Pozor na správné použití cizích termínů (např. <samp>au jus</samp> a nikoli <del><samp>Jus</samp></del>).</dd>
-    <dd>K ověření pravopisu můžete použít <a href="http://prirucka.ujc.cas.cz/" title="Internetorvá jazyková příručka">internetovou příručku</a> či internet obecně.</dd>
-    <dt>Konzistence</dt>
-    <dd>Začínejte každou informaci (každý řádek v poli administrace) velkým písmenem.</dd>
-    <dd>Pokud si nejste jistý, jak napsat např. cenu nebo rozmezí cen, zkopírujte text ze stálé nabídky a upravte ho.</dd>
-    <dd>Za popis jídla patří tečka (v rámci konzistence). Tím pádem by mělo jít o větu, která obsahuje podmět a přísudek (nikoli jakoby pokračování nadpisu).</dd>
-    <dt>Typografie</dt>
-    <dd>V anglických nadpisech patří velká písmena na začátek jednotlivých slov (např. <samp>Scotch Broth</samp>, <samp>Pepper Steak</samp>). V českých nadpisech jen na začátek (např. <samp>Hovězí vývar</samp>, <samp>Tatarský steak</samp>).</dd>
-    <dd>Rozlišujte pomlčku (<samp>–</samp>) a rozdělovník (<samp>-</samp>), případně anglickou pomlčku (<samp>—</samp>). Pokud pomlčka rozděluje pouze dvě slova, nepatří kolem ní mezery (<samp>1.–2. května</samp>). V opačném případě kolem pomlčky mezery v češtině patří (<samp>30. dubna – 1. května</samp>).</dd>
-    <dd>Rozlišujte <samp>„české“</samp> a <samp>“anglické”</samp> uvozovky od znaku pro palce (<samp>"</samp>).</dd>
-    <dd>Apostrof a čárka jsou rozdílné znaky, tedy např. <samp>Fisherman's Chowder</samp> a nikoli <del><samp>Fisherman´s Chowder</samp></del> či <del><samp>Fisherman`s Chowder</samp></del></dd>
-    <dd>Mezi číslo a jednotku patří mezera, pokud se jedná o dvě slova (např. <samp>sto gramů = 100 g</samp>, kdežto <samp>stogramový = 100g</samp>). Totéž platí např. pro procenta a další znaky.</dd>
-    <dd>Na velikosti písmen záleží, zejména také u jednotek (např. <samp>g = gram</samp>, <samp>G = giga</samp>).</dd>
-    <dd>Za interpunkční znaménka (jako je tečka, čárka atp.) patří mezera, až na výjimky jako např. konec závorky v této větě.</dd>
-    <dd>Mezi některá slova patří <a var="inputvar-term-nbsp">pevná mezera</a>. Jedná se o veškerá <a var="inputvar-term-zalomeni-radku">slova nevhodná na konec řádku</a> (jako např. jednopísmenné předložky) bez ohledu na jejich umístění v textu, neboť při tisku či na jiném zařízení se mohou vyskytnout na konci řádku.</dd>
-  </dl>  
- 
+    <dt>Terminology and spelling</dt>
+    <dd>Minimize the use of foreign terms and jargon! Before using a foreign term, make sure there is no usable translation. Czech speakers prefer intelligible (standard) Czech; unfamiliar terms tend to put them off.</dd>
+    <dd>Always explain foreign terms adequately, ideally by translating or rephrasing them (e.g.,<samp>broth</samp> not <del><samp>bouillon</samp></del>). Alternatively, you can use an interactive glossary, e.g., <a var="inputvar-term-sous-vide">sous-vide</a>.</dd>
+    <dd>Be careful to use foreign terms correctly (e.g.,<samp>au jus</samp> not <del><samp>Jus</samp></del>).</dd>
+    <dd>You can check your spelling using the <a href="http://prirucka.ujc.cas.cz/" title="Internet language guide">Internet guide</a>, or the Internet in general.</dd>
+    <dt>Consistency</dt>
+    <dd>Start each piece of information (each row in the administration box) with a capital letter.</dd>
+    <dd>If you are not sure how to write a price or a price range, copy the text from the regular menu and edit it.</dd>
+    <dd>Each dish description ends with a period (to maintain consistency). As a result, it should be a sentence with a subject and a verb (not as if the title continues).</dd>
+    <dt>Typography</dt>
+    <dd>English headings should have capital letters at the start of each word (e.g., <samp>Scotch Broth</samp>,<samp>Pepper Steak</samp>). Czech headings only have one at the start (e.g., <samp>Hovězí vývar</samp>,<samp>Tatarský steak</samp>).</dd>
+    <dd>Distinguish between the en dash (<samp>–</samp>) and the hyphen (<samp>-</samp>), and the em dash (<samp>—</samp>). If the en dash divides two words only, there are no spaces around it (<samp>May 1–2</samp>). In any other case, use spaces around the dash (<samp>April 30 – May 1</samp>).</dd>
+    <dd>Distinguish between the <samp>„Czech“</samp> and <samp>“English”</samp>quotation marks and the inch sign (<samp>"</samp>).</dd>
+    <dd>The apostrophe and the acute accent are different signs, e.g., <samp>Fisherman's Chowder (apostrophe)</samp> not <del><samp>Fisherman´s Chowder</samp></del> or <del><samp>Fisherman`s Chowder</samp></del></dd>
+    <dd>A space goes between a number and a unit if they are separate words (e.g., <samp>one hundred grams (as a noun phrase) = 100 g</samp>, whereas <samp>one-hundred-gram (as an adjective phrase) = 100g</samp>). The same applies to percent and other signs.</dd>
+    <dd>The letter case matters, particularly also with units (e.g., <samp>g = gram</samp>,<samp>G = giga-</samp>).</dd>
+    <dd>Punctuation marks (such as the period, comma, etc.) are followed by a space, with exceptions such as the closing parentheses in this sentence.</dd>
+    <dd>A <a var="inputvar-term-nbsp">non-breaking space</a> should go between certain words. These are all the <a var="inputvar-term-zalomeni-radku">words inappropriate to end a line</a> (such as one-letter Czech prepositions) regardless of their place in the text, as they may occur at the end of the line when being printed or in another device.</dd>
+  </dl>
+
   <form class="editable fillable validable validateform-10 eventable-noevent" id="inputvarform" action="/" method="post" var="action@action">
     <fieldset class="hideable hideable-nohide"><legend var="group">n/a</legend>
       <dl var="inputs">
@@ -31,14 +31,14 @@
         <dd>n/a</dd>
       </dl>
     </fieldset>
-    <fieldset><legend>Ovládací panel</legend>
+    <fieldset><legend>Control panel</legend>
       <dl>
-        <dt var="nopasswd"><label for="inputvar-user">Uživatelské jméno</label></dt>
+        <dt var="nopasswd"><label for="inputvar-user">User name</label></dt>
         <dd var="nopasswd"><input name="username" type="text" id="inputvar-user" value="admin"/></dd>
-        <dt var="nopasswd"><label for="inputvar-passwd">Heslo</label></dt>
+        <dt var="nopasswd"><label for="inputvar-passwd">Password</label></dt>
         <dd var="nopasswd"><input name="passwd" required="required" type="password" id="inputvar-passwd"/></dd>
-        <dt> </dt>
-        <dd><input type="hidden" var="userfilehash@value" name="userfilehash"/><input type="submit" value="Uložit"/></dd>
+        <dt></dt>
+        <dd><input type="hidden" var="userfilehash@value" name="userfilehash"/><input type="submit" value="Save"/></dd>
       </dl>
     </fieldset>
   </form>
