--- a/index.html
+++ b/index.html
@@ -98,20 +98,20 @@
     <section>
       <h id="daily_offer" var="inputvar-nabidka" title="Daily offer…" class="break nobalance">Daily offer</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
-      <dl var="inputvar-nabidka-polevka1" class="card" data-type="Polévka"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-nabidka-polevka2" class="card" data-type="Polévka"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-nabidka-jidlo1" class="card" data-type="Jídlo"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-nabidka-jidlo2" class="card" data-type="Jídlo"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-nabidka-polevka1" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-nabidka-polevka2" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-nabidka-jidlo1" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-nabidka-jidlo2" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <h id="events" var="inputvar-vikendova-akce" title="Weekend events…" class="break nobalance">Weekend events</h>
       <desc var="inputvar-akce-popis">n/a</desc>
-      <dl var="inputvar-akce-predkrm1" class="card" data-type="Předkrm"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-predkrm2" class="card" data-type="Předkrm"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-predkrm3" class="card" data-type="Předkrm"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo1" class="card" data-type="Jídlo"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo2" class="card" data-type="Jídlo"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo3" class="card" data-type="Jídlo"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo4" class="card" data-type="Jídlo"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo5" class="card" data-type="Jídlo"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-predkrm1" class="card" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-predkrm2" class="card" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-predkrm3" class="card" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo1" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo2" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo3" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo4" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo5" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <h id="regular_menu" src="stala_nabidka.html">Regular menu</h>
       <desc>Regular menu not available</desc>
       <h id="drinks_list" src="napojovy_listek.html">Drinks list</h>
