--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <dd>— M.D. Klíma</dd>
     </dl>
     <section>
-      <h id="daily_offer" var="inputvar-nabidka" title="Daily offer…" class="break nobalance">Daily offer</h>
+      <h id="daily_offer" var="inputvar-nabidka" title="Daily offer" class="break nobalance">Daily offer</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
       <dl var="inputvar-nabidka-polevka1" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-polevka2" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
