--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="cs" ns="https://www.steakgrill.cz">
+<body xml:lang="en" ns="https://en.steakgrill.cz">
   <h id="wine_list" author="InternetGuru" ctime="2018-03-28">Wine List</h>
   <desc class="noprint">The wine list is tailored for our restaurant by a leading Czech specialist. Acceptable pricing is a main criterion in addition to the dishes on offer. We offer French, Italian and Czech wines.</desc>
   <section class="contenttoc">
