--- a/plugins/Agregator/catering.html
+++ b/plugins/Agregator/catering.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="cs" ns="https://www.steakgrill.cz">
+<body xml:lang="en" ns="https://en.steakgrill.cz">
   <h id="catering" author="InternetGuru" ctime="2018-02-20">Catering order form</h>
   <desc>We will contact you within three days of order form submission with additional information and a price quote.</desc>
   <p var="contactform-catering">Catering form not available</p>
