--- a/plugins/Agregator/logomanual.html
+++ b/plugins/Agregator/logomanual.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="cs" ns="https://www.steakgrill.cz">
+<body xml:lang="en" ns="https://en.steakgrill.cz">
   <h id="manual" author="InternetGuru" short="Graphics Manual" ctime="2017-08-31">STEAKGRILL® Graphics Manual</h>
   <desc>This Manual defines the basic rules for working with texts and logos of STEAKGRILL® Restaurant. Respective source files for further processing or printing are available for download for each example. All the files are available in the <a href="https://drive.google.com/drive/folders/0B0bWaAtkIZONOXk2SmdXeWltTUE?usp=sharing">global file on GD</a>.</desc>
   <section>
