--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="cs" ns="https://www.steakgrill.cz">
+<body xml:lang="en" ns="https://en.steakgrill.cz">
   <h id="regular_menu" author="InternetGuru" ctime="2018-03-28">Regular Menu</h>
   <desc>We offer popular dishes of international cuisine. Besides steaks and burgers, we will please lovers of salads and unconventional soups, both of which have earned our establishment renown.</desc>
   <section class="contenttoc">
