--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <ul class="akce">
     <li><a class="fa fa-cutlery" href="#daily_offer">Daily offer</a></li>
     <li><a class="fa fa-bomb" href="#weekend_events">Weekend events</a></li>
+    <li><a class="fa fa-cutlery" href="#regular_menu">Regular menu</a></li>
     <li><a class="fa fa-map-marker" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1">Where to find us</a></li>
-    <li><a class="fa fa-facebook-official" href="https://www.facebook.com/Steakgrill/events/">Events on Facebook (Czech)</a></li>
+    <li><a class="fa fa-facebook-official" href="https://www.facebook.com/Steakgrill/">Facebook (Czech)</a></li>
   </ul>
   <section>
     <h id="about_us" class="afterimg">About us</h>
