--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <dl var="inputvar-nabidka-polevka2" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-jidlo1" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-jidlo2" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
-      <h id="events" var="inputvar-vikendova-akce" title="Weekend events…" class="break nobalance">Weekend events</h>
+      <h id="weekend_events" var="inputvar-vikendova-akce" title="Weekend events…" class="break nobalance">Weekend events</h>
       <desc var="inputvar-akce-popis">n/a</desc>
       <dl var="inputvar-akce-predkrm1" class="card" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-akce-predkrm2" class="card" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
