--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <dd>Winner of the <a href="/files/cert.jpg">Bronze Medal of M.D. Rettigová (Czech)</a></dd>
   </dl>
   <ul class="akce">
-    <li><a class="fa fa-cutlery" href="#daily_offer">Daily offer</a></li>
-    <li><a class="fa fa-bomb" href="#weekend_events">Weekend events</a></li>
+<!--     <li><a class="fa fa-cutlery" href="#daily_offer">Daily offer</a></li> -->
+<!--     <li><a class="fa fa-bomb" href="#weekend_events">Weekend events</a></li> -->
     <li><a class="fa fa-cutlery" href="#regular_menu">Regular menu</a></li>
     <li><a class="fa fa-map-marker" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1">Where to find us</a></li>
     <li><a class="fa fa-facebook-official" href="https://www.facebook.com/Steakgrill/">Facebook (Czech)</a></li>
@@ -97,6 +97,7 @@
       <dd>— M.D. Klíma</dd>
     </dl>
     <section>
+<!--
       <h id="daily_offer" var="inputvar-nabidka" title="Daily offer" class="break nobalance">Daily offer</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
       <dl var="inputvar-nabidka-polevka1" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
@@ -113,6 +114,7 @@
       <dl var="inputvar-akce-jidlo3" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-akce-jidlo4" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-akce-jidlo5" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+-->
       <h id="regular_menu" src="stala_nabidka.html">Regular menu</h>
       <desc>Regular menu not available</desc>
       <h id="drinks_list" src="napojovy_listek.html">Drinks list</h>
