--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <dt>Do you offer gift vouchers?</dt>
         <dd>Yes, we offer gift vouchers worth 500 CZK. Validity of the voucher is one year from the date of purchase. You can buy them at the bar or we are happy to mail them.</dd>
         <dt>Do you accept meal vouchers?</dt>
-        <dd>Starting in 2019, it is no longer possible to pay witch meal vouchers in the restaurant.</dd>
+        <dd>Starting in 2019, it is no longer possible to pay with meal vouchers in the restaurant.</dd>
         <dd>Yes, we accept every type of meal voucher.</dd>
         <dt>Can I pay by card?</dt>
         <dd>Yes, you can.</dd>
