--- a/index.html
+++ b/index.html
@@ -152,10 +152,9 @@
       <desc>You can browse the list below before posting a question. It contains answers to the most frequently asked questions.</desc>
       <dl>
         <dt>Do you offer gift vouchers?</dt>
-        <dd>Yes, we offer gift vouchers worth 500 CZK. Validity of the voucher is one year from the date of purchase. You can buy them at the bar or we are happy to mail them.</dd>
+        <dd>Yes, we offer gift vouchers worth 500 CZK. Vouchers are valid for one year starting with the date of purchase. Vouchers are available at the bar or we’re happy to mail them to you.</dd>
         <dt>Do you accept meal vouchers?</dt>
-        <dd>Starting in 2019, it is no longer possible to pay with meal vouchers in the restaurant.</dd>
-        <dd>Yes, we accept every type of meal voucher.</dd>
+        <dd>Since 2019 it is no longer possible to pay with meal vouchers in the restaurant.</dd>
         <dt>Can I pay by card?</dt>
         <dd>Yes, you can.</dd>
         <dt>Do you have Wi-Fi available?</dt>
