--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="en" ns="https://en.steakgrill.cz">
   <h id="regular_menu" author="InternetGuru" ctime="2018-03-28">Regular Menu</h>
-  <desc>We offer popular dishes of international cuisine. Besides steaks and burgers, we will please lovers of salads and unconventional soups, both of which have earned our establishment renown.</desc>
+  <desc>Steakgrill is renowned for savory steaks and burgers however our salads and soups are second to none. One look at our menu says it all.</desc>
   <section class="contenttoc">
     <h class="afterimg" id="soups">Soups</h>
     <desc class="noprint">We make four different soups throughout the day. The soups are Mike’s own recipes. You will not taste them anywhere else!</desc>
@@ -32,7 +32,7 @@
     </dl>
 
     <h class="afterimg break" id="hamburgers_and_pasta">Hamburgers and Pasta</h>
-    <desc>We make hamburgers the traditional way – big and juicy. We recommend pasta as a lighter alternative for less-hungry diners.</desc>
+    <desc>We make hamburgers the traditional way—big and juicy. We recommend pasta as a lighter alternative for less-hungry diners.</desc>
     <dl class="card">
       <dt>Chicken Burger</dt>
       <dd>Grilled marinated chicken steak, sesame-seed bun, pickles, iceberg lettuce, homemade BBQ sauce, fries, coleslaw.</dd>
@@ -41,13 +41,13 @@
     </dl>
     <dl class="card">
       <dt>Cheeseburger</dt>
-      <dd>Grilled ground beef chuck (180 g), sesame-seed bun, homemade BBQ sauce, cheese, tomato, bacon, iceberg lettuce, onion, pickles, fries, coleslaw.</dd>
+      <dd>Grilled ground beef chuck (180 g), sesame-seed bun, homemade BBQ sauce, cheese, tomato, bacon, iceberg lettuce, onion, pickles, fries, coleslaw.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 239</dd>
     </dl>
     <dl class="card">
       <dt>Chicken Penne Pomodoro</dt>
-      <dd>Chicken breast strips (100 g), Italian pasta with tomato sauce and fresh basil with cream, grated Grana Padano cheese, olive oil.</dd>
+      <dd>Chicken breast strips (100 g), Italian pasta with tomato sauce and fresh basil with cream, grated Grana Padano cheese, olive oil.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 169</dd>
     </dl>
@@ -58,7 +58,7 @@
       <dd class="price">CZK 169</dd>
     </dl>
 
-    <h class="afterimg break" id="salad_platters">Salad Platters</h>
+    <h class="afterimg break" id="salads">Salads</h>
     <desc>We offer a selection of world salads loved by our clientele. We recommend the salads with our popular grilled baguette with garlic butter.</desc>
     <dl class="card">
       <dt>Cobb Salad</dt>
@@ -100,7 +100,7 @@
       <dd class="price">CZK 189</dd>
     </dl>
     <dl class="card">
-      <dt>Buffalo Wings, 400 g</dt>
+      <dt>Buffalo Wings, 400 g</dt>
       <dd>A popular US dish. Chicken wings covered in our special homemade savory BBQ sauce, fries, coleslaw.</dd>
       <dd>Recommended with a garlic dip.</dd>
       <dt class="price">Price</dt>
@@ -149,39 +149,39 @@
     </dl>
 
     <h class="afterimg break" id="grilled_steaks">Grilled Steaks</h>
-    <desc>We grill premium meats over an open fire – always mellowed to room temperature. We recommend ordering our beef steaks cooked to medium-rare, but no more than medium. You can have your steak with a choice of sauce.</desc>
+    <desc>We grill premium meats over an open fire—always mellowed to room temperature. We recommend ordering our beef steaks cooked to medium-rare, but no more than medium. You can have your steak with a choice of sauce.</desc>
     <dl class="card">
-      <dt>Grilled Filet Mignon, 180 g</dt>
+      <dt>Grilled Filet Mignon, 180 g</dt>
       <dd>Sirloin steak from a young bull (from a Czech farm), wrapped with dried bacon, mashed potatoes with leeks, bacon and butter, creamed spinach, grilled to the internal temperature that you prefer.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 398</dd>
     </dl>
     <dl class="card">
-      <dt>Grilled Pork Chop, 300 g</dt>
+      <dt>Grilled Pork Chop, 300 g</dt>
       <dd>Grilled pork rib chop with bones, marinated in a herb marinade, mashed potatoes with leeks and bacon, roasted cherry tomatoes, remoulade.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 229</dd>
     </dl>
     <dl class="card">
-      <dt>Chuck Flap, 300 g</dt>
+      <dt>Chuck Flap, 300 g</dt>
       <dd>Grilled fine-cut steak from of the second-highest quality (USDA Choice) North American Black Angus cattle, served on a hotplate with roasted onions, portobello mushrooms and peppers, along with choice potatoes with rosemary and olive oil, remoulade.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 468</dd>
     </dl>
     <dl class="card">
-      <dt>Ribeye Steak, 300 g</dt>
+      <dt>Ribeye Steak, 300 g</dt>
       <dd>One of our most popular steaks. Tenderized steak from highly marbled short loin grilled to the internal temperature that you prefer, choice potatoes with rosemary and olive oil, creamy spinach, remoulade.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 529</dd>
     </dl>
     <dl class="card">
-      <dt>New York Strip Steak au Poivre, 300 g</dt>
+      <dt>New York Strip Steak au Poivre, 300 g</dt>
       <dd>A very popular US steak. Tenderized steak from top sirloin with a flavorful layer of fat, seasoned with freshly crushed black pepper, grilled to the internal temperature that you prefer, choice potatoes with rosemary and olive oil, creamy spinach, remoulade.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 529</dd>
     </dl>
 
-    <h class="afterimg break" id="sweets">Sweets</h>
+    <h class="afterimg break" id="desserts">Desserts</h>
     <desc>We offer tried-and-tested restaurant desserts, made by ourselves according to authentic recipes. We make desserts to order, meaning they are always fresh and first-class.</desc>
     <dl class="card">
       <dt>Hot Chocolate Fondant</dt>
@@ -285,7 +285,7 @@
     <h class="afterimg break" id="condiments_and_sauces">Condiments and Sauces</h>
     <desc>If you like diverse side dishes, choose one of our sauces, dips or condiments. We make all our sauces from scratch.</desc>
     <dl class="card oneline">
-      <dt>Freshly roasted almonds, 100 g</dt>
+      <dt>Freshly roasted almonds, 100 g</dt>
       <dd class="price">CZK 59</dd>
       <dt>Jalapeño peppers, sliced</dt>
       <dd class="price">CZK 29</dd>
