--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
     <section>
       <h id="concept">Restaurant concept</h>
-      <desc>STEAKGRILL® is a Czech concept developed by Michael Klíma based on his twenty years of experience and work in American steakhouses. It differs from other restaurants in that it offers a wide range of popular international dishes in addition to steaks.</desc>
+      <desc>STEAKGRILL® is a Czech concept developed by M. D. Klíma based on his twenty years of experience and work in American steakhouses. It differs from other restaurants in that it offers a wide range of popular international dishes in addition to steaks.</desc>
       <p>We make every meal to order—there is no pre-cooking. We use equipment specifically designed for each dish. We make steaks on a grill, liver on a griddle, and our cordon bleu is fried. Inquisitive guests will have the opportunity to peek in the kitchen to see how we make the meals.</p>
       <dl class="figure mike">
         <dt><img src="/files/thumbs/klima.png" alt="Michael Dobromil Klíma"/></dt>
@@ -53,7 +53,7 @@
       <p>Our meats are never frozen. We make sure the meat reaches room temperature before cooking. We tenderize all meat by gentle manual means (no chemicals).</p>
       <dl>
         <dt><q>Cooking is no hocus-pocus. The quality that goes into the pot is the quality that comes out of it.</q></dt>
-        <dd>— <a href="#concept">M. D. Klíma, chef</a></dd>
+        <dd>— <a href="#concept">M. D. Klíma, Founder of the STEAKGRILL® Concept</a></dd>
       </dl>
       <p>We import mostly from farms in South America, usually from Uruguay, with high and medium degrees of marbling. We use meat from grain-fed animals or <em>USDA Prime</em> and <em>USDA Choice</em> quality class meats. </p>
       <dl class="figure usda">
@@ -92,7 +92,7 @@
     <desc>We make international dishes according to traditional recipes as people all over the world enjoy them. Our guests get exactly as stated on the menu.</desc>
     <dl>
       <dt><q>Give people what they want and what they deserve for their money.</q></dt>
-      <dd>— <a href="#concept">M.D. Klíma, chef</a></dd>
+      <dd>— <a href="#concept">M. D. Klíma, Founder of the STEAKGRILL® Concept</a></dd>
     </dl>
     <section>
 <!--
