--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ and a recognized Grilling and Broiling expert</dd>
       <dt>Steakgrill Restaurant</dt>
       <dd>Open daily from 11 am to 10 pm, Fridays and Saturdays until 11 pm</dd>
       <dd>Račiněves 189, 413 01 Roudnice nad Labem (<a href="https://www.google.com/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1" title="Go to Google Maps">map</a>)</dd>
-      <dd><a href="mailto:steakgrill@steakgrill.cz">steakgrill@steakgrill.cz</a></dd>
+      <dd><a href="mailto:restaurant@steakgrill.cz">restaurant@steakgrill.cz</a></dd>
       <dd var="inputvar-rezervace">n/a</dd>
     </dl>
     <dl class="card">
