--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <dl class="figure honzajk">
     <dt><img src="/files/thumbs/honzajk_153.png" alt="Jaroslav Honzajk"/></dt>
     <dd><strong>Jaroslav Honzajk</strong>, Owner and Chef<br/>
-and a recognized Grilling and Broiling expert</dd>
+and a recognized Grilling and Broiling Expert</dd>
     <dd>Member and certified commissioner of <a href="https://www.akc.cz/" title="Association of Cooks and Confectioners of Czech Republic">AKC (Czech)</a>, member of <a href="https://www.ahrcr.cz/" title="Association of Hotels and Restaurants of the Czech Republic">AHR CR (Czech)</a> and its gastronomy section. <a href="https://www.cenyahr.cz/drzitele-vyrocnich-cen-2007" title="Winner of 2007 annual awards">Restaurateur of the Year 2007 (Czech)</a> and <a href="https://www.cenyahr.cz/predstaveni-kandidatu" title="Nominee for 2018 annual awards">nominated in 2018 (Czech)</a>. Winner of the <a href="/files/cert.jpg">Bronze Medal of M.D. Rettigová (Czech)</a>.</dd>
   </dl>
   <ul class="akce">
