--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ and a recognized Grilling and Broiling Expert</dd>
     <dd>Member and certified commissioner of <a href="https://www.akc.cz/" title="Association of Cooks and Confectioners of Czech Republic">AKC (Czech)</a>, member of <a href="https://www.ahrcr.cz/" title="Association of Hotels and Restaurants of the Czech Republic">AHR CR (Czech)</a> and its gastronomy section. <a href="https://www.cenyahr.cz/drzitele-vyrocnich-cen-2007" title="Winner of 2007 annual awards">Restaurateur of the Year 2007 (Czech)</a> and <a href="https://www.cenyahr.cz/predstaveni-kandidatu" title="Nominee for 2018 annual awards">nominated in 2018 (Czech)</a>. Winner of the <a href="/files/cert.jpg">Bronze Medal of M.D. Rettigová (Czech)</a>.</dd>
   </dl>
   <ul class="akce">
-    <li><a class="fa fa-cutlery" href="daily_offer">Daily offer</a></li>
-    <li><a class="fa fa-bomb" href="weekend_events">Weekend events</a></li>
-    <li><a class="fa fa-cutlery" href="regular_menu">Regular menu</a></li>
+    <li><a class="fa fa-cutlery" href="#daily_offer">Daily offer</a></li>
+    <li><a class="fa fa-bomb" href="#weekend_events">Weekend events</a></li>
+    <li><a class="fa fa-cutlery" href="#regular_menu">Regular menu</a></li>
     <li><a class="fa fa-map-marker" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1">Where to find us</a></li>
     <li><a class="fa fa-facebook-official" href="https://www.facebook.com/Steakgrill/">Facebook (Czech)</a></li>
   </ul>
