--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <h id="jaroslav_honzajk">Jaroslav Honzajk</h>
     <desc class="sep">Owner and Chef and a recognized Grilling and Broiling Expert</desc>
     <p>Member and certified commissioner of <a href="https://www.akc.cz/" title="Association of Cooks and Confectioners of Czech Republic">AKC (Czech)</a>, member of <a href="https://www.ahrcr.cz/" title="Association of Hotels and Restaurants of the Czech Republic">AHR CR (Czech)</a> and its gastronomy section. <a href="https://www.cenyahr.cz/drzitele-vyrocnich-cen-2007" title="Winner of 2007 annual awards">Restaurateur of the Year 2007 (Czech)</a> and <a href="https://www.cenyahr.cz/predstaveni-kandidatu" title="Nominee for 2018 annual awards">nominated in 2018 (Czech)</a>. Winner of the <a href="/files/cert.jpg">Bronze Medal of M.D. Rettigová (Czech)</a>.</p>
-      
     <ul class="akce">
       <li><a class="fa fa-cutlery" href="#daily_offer">Daily offer</a></li>
       <li><a class="fa fa-bomb" href="#weekend_events">Weekend events</a></li>
@@ -14,12 +13,13 @@
       <li><a class="fa fa-map-marker" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1">Where to find us</a></li>
       <li><a class="fa fa-facebook-official" href="https://www.facebook.com/Steakgrill/">Facebook (Czech)</a></li>
     </ul>
-    <h id="about_us" class="afterimg">About us</h>
-    <desc>Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants. Our meticulous approach to meat and cooking in general has brought us to the top of Czech gastronomy and has earned us features on several TV shows.</desc>
-    <ul class="akce">
+    <h id="about_us">About us</h>
+    <desc class="sep">Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants.</desc>
+    <ul class="contentbalancer-simple">
       <li><a class="fa fa-eye" href="https://goo.gl/maps/oNFr6HEc4pF2">3D virtual tour</a></li>
+      <li>TODO</li>
     </ul>
-    <section>
+    <section class="contentbalancer-none">
       <h id="concept">Restaurant concept</h>
       <desc>STEAKGRILL® is a Czech concept developed by M. D. Klíma based on his twenty years of experience and work in American steakhouses. It differs from other restaurants in that it offers a wide range of popular international dishes in addition to steaks.</desc>
       <p>We make every meal to order—there is no pre-cooking. We use equipment specifically designed for each dish. We make steaks on a grill, liver on a griddle, and our cordon bleu is fried. Inquisitive guests will have the opportunity to peek in the kitchen to see how we make the meals.</p>
@@ -88,13 +88,13 @@
       </dl>
     </section>
     <h id="menu">Menu</h>
-    <desc>We make international dishes according to traditional recipes as people all over the world enjoy them. Our guests get exactly as stated on the menu.</desc>
-    <dl>
-      <dt><q>Give people what they want and what they deserve for their money.</q></dt>
-      <dd>— <a href="#concept">M. D. Klíma, Founder of the STEAKGRILL® Concept</a></dd>
-    </dl>
-    <section>
-
+    <desc class="sep">We make international dishes according to traditional recipes as people all over the world enjoy them.</desc>
+    <ul class="contentbalancer-simple">
+      <li>TODO</li>
+    </ul>
+<!--
+-->
+    <section class="contentbalancer-none">
       <h id="daily_offer" var="inputvar-nabidka" title="Daily offer" class="break nobalance">Daily offer</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
       <dl var="inputvar-nabidka-polevka1" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
@@ -111,7 +111,10 @@
       <dl var="inputvar-akce-jidlo3" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-akce-jidlo4" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-akce-jidlo5" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
-
+      <dl class="nomultiple">
+        <dt><q>Give people what they want and what they deserve for their money.</q></dt>
+        <dd>— <a href="#concept">M. D. Klíma, Founder of the STEAKGRILL® Concept</a></dd>
+      </dl>
       <h id="regular_menu" src="stala_nabidka.html">Regular menu</h>
       <desc>Regular menu not available</desc>
       <h id="drinks_list" src="napojovy_listek.html">Drinks list</h>
@@ -119,19 +122,19 @@
       <h id="wine_list" src="vinny_listek.html">Wine list</h>
       <desc>Wine list not available</desc>
     </section>
-    <h id="contact" class="afterimg">Contact</h>
-    <desc>The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29). See how you can get to us easily within 30 minutes drive from Prague.</desc>
+    <h id="contact">Contact</h>
+    <desc>The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
     <ul class="akce">
       <li><a class="fa fa-map-marker" href="https://www.google.com/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1">Where to find us</a></li>
     </ul>
-    <dl class="card">
+    <dl>
       <dt>Steakgrill Restaurant</dt>
       <dd>Open daily from 11 am to 10 pm, Fridays and Saturdays until 11 pm</dd>
       <dd>Račiněves 189, 413 01 Roudnice nad Labem (<a href="https://www.google.com/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1" title="Go to Google Maps">map</a>)</dd>
       <dd><a href="mailto:restaurant@steakgrill.cz">restaurant@steakgrill.cz</a></dd>
       <dd var="inputvar-rezervace">n/a</dd>
     </dl>
-    <dl class="card">
+    <dl>
       <dt>Billing details</dt>
       <dd>Jaroslav Honzajk</dd>
       <dd>Račiněves 62, 413 01 Račiněves</dd>
