--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </ul>
 <!--
 -->
-    <section class="contentbalancer-none">
+    <section>
       <h id="daily_offer" var="inputvar-nabidka" title="Daily offer" class="break nobalance">Daily offer</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
       <dl var="inputvar-nabidka-polevka1" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
