--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
     <h id="menu">Menu</h>
     <desc class="sep">We make international dishes according to traditional recipes as people all over the world enjoy them.</desc>
     <ul class="contentbalancer-simple">
-      <li>TODO</li>
+      <li><a href="/regular_menu">Regular Menu</a></li>
+      <li><a href="/driks_list">Drinks List</a></li>
+      <li><a href="/wine_list">Wine List</a></li>
     </ul>
 <!--
 -->
