--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
       <desc>Wine list not available</desc>
     </section>
     <h id="contact">Contact</h>
-    <desc>The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
-    <ul class="akce">
-      <li><a class="fa fa-map-marker" href="https://www.google.com/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1">Where to find us</a></li>
+    <desc class="sep">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
+    <ul class="contentbalancer-simple">
+      <li>TODO</li>
     </ul>
     <dl>
       <dt>Steakgrill Restaurant</dt>
