--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <section>
     <h id="jaroslav_honzajk">Jaroslav Honzajk</h>
     <desc class="sep">Owner and Chef and a recognized Grilling and Broiling Expert</desc>
-    <p>Member and certified commissioner of <a href="https://www.akc.cz/" title="Association of Cooks and Confectioners of Czech Republic">AKC (Czech)</a>, member of <a href="https://www.ahrcr.cz/" title="Association of Hotels and Restaurants of the Czech Republic">AHR CR (Czech)</a> and its gastronomy section. <a href="https://www.cenyahr.cz/drzitele-vyrocnich-cen-2007" title="Winner of 2007 annual awards">Restaurateur of the Year 2007 (Czech)</a> and <a href="https://www.cenyahr.cz/predstaveni-kandidatu" title="Nominee for 2018 annual awards">nominated in 2018 (Czech)</a>. Winner of the <a href="/files/cert.jpg">Bronze Medal of M.D. Rettigová (Czech)</a>.</p>
     <ul class="photoswipe">
       <li><a href="/files/design/honzajk.jpg"><img src="/files/preview/design/honzajk.jpg" alt="Jaroslav Honzajk"/></a></li>
     </ul>
-    <ul class="akce nomultiple">
+    <p>Member and certified commissioner of <a href="https://www.akc.cz/" title="Association of Cooks and Confectioners of Czech Republic">AKC (Czech)</a>, member of <a href="https://www.ahrcr.cz/" title="Association of Hotels and Restaurants of the Czech Republic">AHR CR (Czech)</a> and its gastronomy section. <a href="https://www.cenyahr.cz/drzitele-vyrocnich-cen-2007" title="Winner of 2007 annual awards">Restaurateur of the Year 2007 (Czech)</a> and <a href="https://www.cenyahr.cz/predstaveni-kandidatu" title="Nominee for 2018 annual awards">nominated in 2018 (Czech)</a>. Winner of the <a href="/files/cert.jpg">Bronze Medal of M.D. Rettigová (Czech)</a>.</p>
+    <ul class="akce">
       <li><a class="fa fa-cutlery" href="#daily_offer">Daily offer</a></li>
       <li><a class="fa fa-bomb" href="#weekend_events">Weekend events</a></li>
       <li><a class="fa fa-cutlery" href="#regular_menu">Regular menu</a></li>
