--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       <li><a href="/files/design/honzajk.jpg"><img src="/files/preview/design/honzajk.jpg" alt="Jaroslav Honzajk"/></a></li>
     </ul>
     <p>Member and certified commissioner of <a href="https://www.akc.cz/" title="Association of Cooks and Confectioners of Czech Republic">AKC (Czech)</a>, member of <a href="https://www.ahrcr.cz/" title="Association of Hotels and Restaurants of the Czech Republic">AHR CR (Czech)</a> and its gastronomy section. <a href="https://www.cenyahr.cz/drzitele-vyrocnich-cen-2007" title="Winner of 2007 annual awards">Restaurateur of the Year 2007 (Czech)</a> and <a href="https://www.cenyahr.cz/predstaveni-kandidatu" title="Nominee for 2018 annual awards">nominated in 2018 (Czech)</a>. Winner of the <a href="/files/cert.jpg">Bronze Medal of M.D. Rettigová (Czech)</a>.</p>
-    <ul>
-      <li><span class="fas fa-utensils">i</span><a href="#daily_offer">Daily offer</a></li>
-      <li><span class="fas fa-calendar-check">i</span><a href="#weekend_events">Weekend events</a></li>
-      <li><span class="fas fa-clipboard-list">i</span><a href="#regular_menu">Regular menu</a></li>
-      <li><span class="fas fa-map-marked-alt">i</span><a href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1">Where to find us</a></li>
-      <li><span class="fab fa-facebook">i</span><a href="https://www.facebook.com/Steakgrill/">Facebook (Czech)</a></li>
+    <ul class="button-list">
+      <li><a class="button" href="#daily_offer"><span class="fas fa-utensils">i</span>Daily offer</a></li>
+      <li><a class="button" href="#weekend_events"><span class="fas fa-calendar-check">i</span>Weekend events</a></li>
+      <li><a class="button" href="#regular_menu"><span class="fas fa-clipboard-list">i</span>Regular menu</a></li>
+      <li><a class="button" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1"><span class="fas fa-map-marked-alt">i</span>Where to find us</a></li>
+      <li><a class="button" href="https://www.facebook.com/Steakgrill/"><span class="fab fa-facebook">i</span>Facebook (Czech)</a></li>
     </ul>
     <h id="about_us">About us</h>
     <desc class="sep">Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants.</desc>
