--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </ul>
     <h id="about_us">About us</h>
     <desc class="sep">Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants.</desc>
-    <ul class="contentbalancer-simple">
-      <li><a class="fa fa-eye" href="https://goo.gl/maps/oNFr6HEc4pF2">3D virtual tour</a></li>
+    <ul class="button-list contentbalancer-simple">
+      <li><a class="button button-img" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fab fa-3x fa-eye">i</span>3D virtual tour</a></li>
       <li>TODO</li>
     </ul>
     <section class="contentbalancer-none">
