--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h id="about_us">About us</h>
     <desc class="sep">Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants.</desc>
     <ul class="button-list contentbalancer-simple">
-      <li><a class="button button-img" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fab fa-3x fa-eye">i</span>3D virtual tour</a></li>
+      <li><a class="button button-img" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fas fa-3x fa-sync-alt">i</span>3D virtual tour</a></li>
       <li>TODO</li>
     </ul>
     <section class="contentbalancer-none">
