--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
     </section>
     <h id="menu">Menu</h>
     <desc class="sep">We make international dishes according to traditional recipes as people all over the world enjoy them.</desc>
-    <ul class="contentbalancer-simple">
-      <li><a href="/regular_menu">Regular Menu</a></li>
-      <li><a href="/driks_list">Drinks List</a></li>
-      <li><a href="/wine_list">Wine List</a></li>
+    <ul class="button-list">
+      <li><a class="button button-image" href="/regular_menu"><span class="fas fa-3x fa-clipboard-list">i</span>Regular Menu</a></li>
+      <li><a class="button button-image" href="/driks_list"><span class="fas fa-3x fa-mug-hot">i</span>Drinks List</a></li>
+      <li><a class="button button-image" href="/wine_list"><span class="fas fa-3x fa-wine-glass-alt">i</span>Wine List</a></li>
     </ul>
 <!--
 -->
