--- a/index.html
+++ b/index.html
@@ -103,20 +103,20 @@
     <section>
       <h id="daily_offer" var="inputvar-nabidka" title="Daily offer" class="break nobalance">Daily offer</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
-      <dl var="inputvar-nabidka-polevka1" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-nabidka-polevka2" class="card" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-nabidka-jidlo1" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-nabidka-jidlo2" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-nabidka-polevka1" class="meal" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-nabidka-polevka2" class="meal" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-nabidka-jidlo1" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-nabidka-jidlo2" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <h id="weekend_events" var="inputvar-vikendova-akce" title="Weekend events…" class="break nobalance">Weekend events</h>
       <desc var="inputvar-akce-popis">n/a</desc>
-      <dl var="inputvar-akce-predkrm1" class="card" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-predkrm2" class="card" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-predkrm3" class="card" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo1" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo2" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo3" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo4" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
-      <dl var="inputvar-akce-jidlo5" class="card" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-predkrm1" class="meal" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-predkrm2" class="meal" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-predkrm3" class="meal" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo1" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo2" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo3" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo4" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-akce-jidlo5" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl class="nomultiple">
         <dt><q>Give people what they want and what they deserve for their money.</q></dt>
         <dd>— <a href="#concept">M. D. Klíma, Founder of the STEAKGRILL® Concept</a></dd>
