--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
       <dl var="inputvar-akce-jidlo3" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-akce-jidlo4" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-akce-jidlo5" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
+      <h id="references">References</h>
+      <desc>n/a</desc>
       <dl class="nomultiple">
         <dt><q>Give people what they want and what they deserve for their money.</q></dt>
         <dd>— <a href="#concept">M. D. Klíma, Founder of the STEAKGRILL® Concept</a></dd>
