--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <h id="references" class="nobalance">References</h>
       <desc>n/a</desc>
       <dl class="nomultiple">
-        <dt><img src="/files/thumbs/design/klima." alt="M. D. Klíma"/></dt>
+        <dt><img src="/files/thumbs/design/klima.png" alt="M. D. Klíma"/></dt>
         <dd><q>Give people what they want and what they deserve for their money.</q></dd>
         <dd>— <a href="#concept">M. D. Klíma, Founder of the STEAKGRILL® Concept</a></dd>
       </dl>
