--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a class="button button-img" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1"><span class="fas fa-3x fa-map-marked-alt">i</span>Where to find us</a></li>
       <li><a class="button button-img" href="https://www.facebook.com/Steakgrill/"><span class="fab fa-3x fa-facebook">i</span>Facebook (Czech)</a></li>
     </ul>
-    <h id="about_us">About us</h>
+    <h id="about_us">About Us</h>
     <desc class="sep">Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants.</desc>
     <ul class="button-list">
       <li><a class="button button-img" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fas fa-3x fa-sync-alt">i</span>3D virtual tour</a></li>
