--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
     </section>
     <h id="contact">Contact</h>
     <desc class="sep">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
-    <ul class="contentbalancer-simple">
-      <li>TODO</li>
+    <ul class="button-list">
+      <li><a class="button" href="#news">Subscribe to our newsletter</a></li>
+      <li><a class="button" href="#contact_form">Contact form</a></li>
+      <li><a class="button" href="#questions">Frequently asked questions</a></li>
     </ul>
     <dl>
       <dt>Steakgrill Restaurant</dt>
