--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <dd>Company ID: 19026811, VAT ID: CZ7008172666</dd>
       <dd><a href="mailto:jaroslav.honzajk@steakgrill.cz">jaroslav.honzajk@steakgrill.cz</a></dd>
     </dl>
-    <section class="contantbalancer-none">
+    <section class="contentbalancer-none">
       <h id="news">Subscribe to our newsletter</h>
       <desc>We inform our registered customers about barbecue parties and other events that we organize. To subscribe, just fill in your email address. You can cancel your subscription at any time.</desc>
       <p var="contactform-news">The newsletter subscription form is currently not available</p>
