--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <li><a class="button button-img" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fas fa-3x fa-sync-alt">i</span>3D virtual tour</a></li>
       <li>TODO</li>
     </ul>
-    <section class="contentbalancer-none">
+<!--     <section class="contentbalancer-none"> -->
+    <section>
       <h id="concept">Restaurant concept</h>
       <desc>STEAKGRILL® is a Czech concept developed by M. D. Klíma based on his twenty years of experience and work in American steakhouses. It differs from other restaurants in that it offers a wide range of popular international dishes in addition to steaks.</desc>
       <p>We make every meal to order—there is no pre-cooking. We use equipment specifically designed for each dish. We make steaks on a grill, liver on a griddle, and our cordon bleu is fried. Inquisitive guests will have the opportunity to peek in the kitchen to see how we make the meals.</p>
